--- a/application.yml
+++ b/application.yml
@@ -1,36 +1,49 @@
 server:
-  port: @server.port@
-  contextPath: /dashboard
+  port: 8443
+  contextPath: /api
+  ui:
+    url: http://127.0.0.1:8080
+  ssl:
+    key-store: keystore.p12
+    key-store-password: changeit
+    keyStoreType: PKCS12
+    keyAlias: tomcat
 
-image:
-  root:
-    path: @image.root.path@ 
-  host:
-    name: @image.host.name@
-
-management:
-  contextPath: /actuator 
-  
 spring:
   jmx:
     enabled: false
   aop:
-    proxy-target-class: @spring.aop.proxy-target-class@
+    proxy-target-class: true
   security:
     bcryptPasswordEncoder:
-      strength: @spring.security.bcryptPasswordEncoder.strength@
+      strength: 4
   datasource:
-    driverClassName: @spring.datasource.driverClassName@
-    url: @spring.datasource.url@
-    username: @spring.datasource.username@
-    password: @spring.datasource.password@
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/ownpleasuredb
+    username: postgres
+    password: root
   jpa:
-    database: @spring.jpa.database@
-    database-platform: @spring.jpa.database-platform@
-    hibernate.ddl-auto: @spring.jpa.hibernate.ddl-auto@
-    show-sql: @spring.jpa.show-sql@
+    database: POSTGRESQL
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate.ddl-auto: none
+    show-sql: true
+    
+liquibase:
+  changeLog: classpath:/db/changelog/db.changelog-master.xml
+  enabled: true  
+    
+management:
+  contextPath: /actuator
 
 ok:
   client:
-    clientSecret: @ok.client.clientSecret@
-    clientPublicKey: @ok.client.clientPublicKey@
+    accessTokenUri: https://api.ok.ru/oauth/token.do
+    userAuthorizationUri: https://connect.ok.ru/oauth/authorize
+    clientId: 1240810752
+    clientSecret: 69E5673FEE849F08741BF358
+    clientPublicKey: CBAGEGPKEBABABABA
+#   scope: VALUABLE_ACCESS
+    authenticationScheme: query
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://api.ok.ru/
