--- a/classes/apache.yaml
+++ b/classes/apache.yaml
@@ -3,13 +3,16 @@ service_ensure:
     value: {running, stopped}
     lable: service
     description: "Apache service status"
+    default: stopped
 package_ensure:
     type: list
     value: {present, absent, 1.2, 1.3}
     lable: package
     description: "Apache package status"
+    default: absent
 port:
     type: number
     value: 1..65000
     lable: port
     description: Apache listen port number
+    default: 80
