--- a/classes/mysql_server.yaml
+++ b/classes/mysql_server.yaml
@@ -1,14 +1,18 @@
 service_enabled:
     type: bool
     lable: "Enable mysql service"
+    value: True
     description: "Service will start automaticaly after reboot"
+    default: False
 package_ensure:
     type: list
-    value: {present, absent, 1.2, 1.3}
+    value: [present, absent, 1.2, 1.3]
     lable: "Package status"
     description: "Mysql package status"
-package_name::
+    default: absent
+package_name:
     type: string
     value: "+*"
     lable: "Package name"
     description: "Name of mysql server package"
+    default: "+*" 
