--- a/classes/apache.yaml
+++ b/classes/apache.yaml
@@ -1,18 +1,18 @@
 service_ensure:
     type: list
     value: {running, stopped}
-    lable: service
+    label: service
     description: "Apache service status"
     default: stopped
 package_ensure:
     type: list
     value: {present, absent, 1.2, 1.3}
-    lable: package
+    label: package
     description: "Apache package status"
     default: absent
 port:
     type: number
     value: 1..65000
-    lable: port
+    label: port
     description: Apache listen port number
     default: 80
