--- a/classes/apache.yaml
+++ b/classes/apache.yaml
@@ -4,20 +4,28 @@ service_ensure:
     label: service
     description: "Apache service status"
     default: stopped
+    options:
+        label: service
 package_ensure:
     type: list
     value: {present, absent, 1.2, 1.3}
     label: package
     description: "Apache package status"
     default: absent
+    options:
+        label: service
 port:
     type: number
     value: 1..65000
     label: port
     description: Apache listen port number
     default: 80
+    options:
+        label: service
 custom:
     type: text
     value: {key: value}
     label: custom
     default: "" 
+    options:
+        label: service
