--- a/classes/mysql_server.yaml
+++ b/classes/mysql_server.yaml
@@ -1,31 +1,21 @@
 service_enabled:
     type: bool
-    label: "Enable mysql service"
-    value: True
-    description: "Service will start automaticaly after reboot"
-    default: False
     options:
-        label: service
+        label: service_enabled
+        help_text: "MySql Server service status"
+        initial: False
 package_ensure:
     type: list
-    value: [present, absent, 1.2, 1.3]
-    label: "Package status"
-    description: "Mysql package status"
-    default: absent
     options:
-        label: service
+        label: package_ensure
+        choices: {present, absent, 1.2, 1.3}
+        help_text: "MySql Server package ensure"
+        initial: absent
 package_name:
     type: string
-    value: "+*"
-    label: "Package name"
-    description: "Name of mysql server package"
-    default: "+*"
     options:
-        label: service
-custom:
-    type: text
-    value: {key: value}
-    label: custom
-    default: ""
-    options:
-        label: service 
+        label: package_name
+        choices: {present, absent, 1.2, 1.3}
+        help_text: "MySql Server package_name"
+        initial: absent
+        initial:  "+*"
