--- a/classes/apache.yaml
+++ b/classes/apache.yaml
@@ -1,31 +1,22 @@
 service_ensure:
     type: list
-    value: {running, stopped}
-    label: service
-    description: "Apache service status"
-    default: stopped
     options:
         label: service
+        choices: [running, stopped]
+        help_text: "Apache service status"
+        initial: stopped
 package_ensure:
     type: list
-    value: {present, absent, 1.2, 1.3}
-    label: package
-    description: "Apache package status"
-    default: absent
     options:
-        label: service
+        label: package
+        choices: {present, absent, 1.2, 1.3}
+        help_text: "Apache package status"
+        initial: absent
 port:
     type: number
-    value: 1..65000
-    label: port
-    description: Apache listen port number
-    default: 80
     options:
-        label: service
-custom:
-    type: text
-    value: {key: value}
-    label: custom
-    default: "" 
-    options:
-        label: service
+        label: port
+        min_value: 1
+        max_value: 65000
+        help_text: Apache listen port number
+        initial: 80
