--- a/classes/mysql_server.yaml
+++ b/classes/mysql_server.yaml
@@ -8,14 +8,13 @@ package_ensure:
     type: list
     options:
         label: package_ensure
-        choices: {present, absent, 1.2, 1.3}
+        choices: [present, absent, 1.2, 1.3]
         help_text: "MySql Server package ensure"
         initial: absent
 package_name:
     type: string
     options:
         label: package_name
-        choices: {present, absent, 1.2, 1.3}
         help_text: "MySql Server package_name"
         initial: absent
         initial:  "+*"
