update role: role_agent1

--- a/roles/role_agent1.yaml
+++ b/roles/role_agent1.yaml
@@ -2,6 +2,6 @@
 apache::hello: 10
 apache::package_ensure: present
 apache::port: 8080
-apache::service_ensure: running
+apache::service_ensure: stopped
 classes:
 - apache
