--- a/roles/role_agent1.yaml
+++ b/roles/role_agent1.yaml
@@ -1,6 +1,6 @@
 ---
 apache::hello: 10
-apache::package_ensure: present
+apache::package_ensure: absent
 apache::port: 8080
 apache::service_ensure: stopped
 classes:
