--- a/roles/role_agent1.yaml
+++ b/roles/role_agent1.yaml
@@ -1,6 +1,7 @@
 ---
 apache::hello: 10
 apache::hello1: true
+apache::hello_world: 1234567
 apache::package_ensure: present
 apache::port: 8080
 apache::service_ensure: running
