--- a/classes/mysql.yaml
+++ b/classes/mysql.yaml
@@ -3,14 +3,14 @@ service_enabled:
     options:
         label: service_enabled
         help_text: "MySql Server service status"
-        initial: False
+        initial: true
 package_ensure:
     type: list
     options:
         label: package_ensure
-        choices: [present, absent, 1.2, 1.3]
+        choices: [present, absent, latest, 1.2, 1.3]
         help_text: "MySql Server package ensure"
-        initial: absent
+        initial: present
 package_name:
     type: string
     options:
