--- a/classes/apache.yaml
+++ b/classes/apache.yaml
@@ -4,14 +4,14 @@ service_ensure:
         label: service
         choices: [running, stopped]
         help_text: "Apache service status"
-        initial: stopped
+        initial: running
 package_ensure:
     type: list
     options:
         label: package
         choices: [present, absent, 1.2, 1.3]
         help_text: "Apache package status"
-        initial: absent
+        initial: present
 port:
     type: number
     options:
