--- a/roles/role_agent1.yaml
+++ b/roles/role_agent1.yaml
@@ -1,6 +1,6 @@
 ---
-apache::package_ensure: present
-apache::port: 80
+apache::package_ensure: absent
+apache::port: 8080
 apache::service_ensure: running
 classes:
 - apache
