--- a/roles/role_agent1.yaml
+++ b/roles/role_agent1.yaml
@@ -5,5 +5,9 @@ apache::service_ensure: running
 classes:
 - apache
 - ntp
+- mysql
+mysql::package_ensure: present
+mysql::package_name: mysql-server
+mysql::service_enabled: true
 ntp::package_ensure: present
 ntp::servers: ntp.ubuntu.com
