--- a/roles/role_agent1.yaml
+++ b/roles/role_agent1.yaml
@@ -1,6 +1,6 @@
 ---
 apache::package_ensure: present
 apache::port: 80
-apache::service_ensure: stopped
+apache::service_ensure: running
 classes:
 - apache
