--- a/roles/brand_new_role.yaml
+++ b/roles/brand_new_role.yaml
@@ -5,3 +5,5 @@ classes:
 apache::package_ensure: present
 apache::port: 8080
 apache::service_ensure: running
+apache::field1: value1
+apache::field2: value2
