--- a/roles/1234.yaml
+++ b/roles/1234.yaml
@@ -3,5 +3,5 @@ classes:
 - postgresql
 postgresql::package_ensure: present
 postgresql::package_name: postgresql
-postgresql::password: '11111'
+postgresql::password: '4565464'
 postgresql::service_enabled: false
