postgresql.yaml edited online with Bitbucket

--- a/classes/postgresql.yaml
+++ b/classes/postgresql.yaml
@@ -22,5 +22,5 @@ password:
     options:
         label: password
         help_text: "PostgreSQL Server password"
-        initial:
+        initial: ""
 
