--- a/roles/1.yaml
+++ b/roles/1.yaml
@@ -1,7 +1,7 @@
 ---
 apache::package_ensure: present
 apache::port: 80
-apache::secret: '12333'
+apache::secret: '123123123123'
 apache::service_ensure: running
 classes:
 - apache
