--- a/roles/888.yaml
+++ b/roles/888.yaml
@@ -4,6 +4,6 @@ classes:
 rabbitmq::main_port: 5672
 rabbitmq::management_port: 15672
 rabbitmq::package_ensure: present
-rabbitmq::password1: '123123'
-rabbitmq::password2: '123123123'
-rabbitmq::service_ensure: running
+rabbitmq::password1: '1212312'
+rabbitmq::password2: '12312312'
+rabbitmq::service_ensure: stopped
